welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:2: error: ';' expected but ')' found.
  if (a-b>=10 || a-c>=1) || b-c>=10 ){
                                    ^